--- a/UnitTests/PInvoke/Kernel32/Kernel32.csproj
+++ b/UnitTests/PInvoke/Kernel32/Kernel32.csproj
@@ -1,138 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="16.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EF6CA228-59F6-495B-8F59-372690E68650}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>UnitTest.PInvoke.Kernel32</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x64</PlatformTarget>
+    <TargetFramework>net472</TargetFramework>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
+    <ProjectReference Include="..\..\..\PInvoke\Kernel32\Vanara.PInvoke.Kernel32.csproj" />
+    <ProjectReference Include="..\..\..\PInvoke\Security\Vanara.PInvoke.Security.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="HeapApiTests.cs" />
-    <Compile Include="FileApiTests.cs" />
-    <Compile Include="FibersApiTests.cs" />
-    <Compile Include="ErrHandlingApiTests.cs" />
-    <Compile Include="EnclaveApiTests.cs" />
-    <Compile Include="DateTimeApiTests.cs" />
-    <Compile Include="AppModelTests.cs" />
-    <Compile Include="InterlockedApiTests.cs" />
-    <Compile Include="InteropServices\SafeLocalHandleTests.cs" />
-    <Compile Include="WtsApi32Tests.cs" />
-    <Compile Include="Wow64ApiSetTests.cs" />
-    <Compile Include="WinNTTests.cs" />
-    <Compile Include="WinNlsTests.cs" />
-    <Compile Include="WinBase.UmsTests.cs" />
-    <Compile Include="WinBase.TxFTests.cs" />
-    <Compile Include="WinBase.TimeTests.cs" />
-    <Compile Include="WinBase.ResourceTests.cs" />
-    <Compile Include="WinBase.ProfileTests.cs" />
-    <Compile Include="WinBase.ProcessThreadTests.cs" />
-    <Compile Include="WinBase.PowerTests.cs" />
-    <Compile Include="WinBase.MemMgmtTests.cs" />
-    <Compile Include="WinBase.MailslotTests.cs" />
-    <Compile Include="WinBase.LibTests.cs" />
-    <Compile Include="WinBase.FileTests.cs" />
-    <Compile Include="WinBaseTests.cs" />
-    <Compile Include="WinBase.CommTests.cs" />
-    <Compile Include="WinBase.BackupTests.cs" />
-    <Compile Include="WinBase.AtomTests.cs" />
-    <Compile Include="WinBase.AppTests.cs" />
-    <Compile Include="WerApiTests.cs" />
-    <Compile Include="VersionHelpersTests.cs" />
-    <Compile Include="UtilApiSetTests.cs" />
-    <Compile Include="TimeZoneApiTests.cs" />
-    <Compile Include="ThreadPoolLegacyApiSetTests.cs" />
-    <Compile Include="ThreadPoolApiSetTests.cs" />
-    <Compile Include="SystemTopologyTests.cs" />
-    <Compile Include="SynchApiTests.cs" />
-    <Compile Include="StringApiSetTests.cs" />
-    <Compile Include="RtlSupportApiTests.cs" />
-    <Compile Include="RealtimeApiSetTests.cs" />
-    <Compile Include="PsApiTests.cs" />
-    <Compile Include="ProfileApiTests.cs" />
-    <Compile Include="ProcessSnapshotTests.cs" />
-    <Compile Include="ProcessThreadsTests.cs" />
-    <Compile Include="PathCchTests.cs" />
-    <Compile Include="ProcessEnvTests.cs" />
-    <Compile Include="NameSpaceApiTests.cs" />
-    <Compile Include="NamedPipeApiTests.cs" />
-    <Compile Include="MemoryApiTests.cs" />
-    <Compile Include="LibLoaderApiTests.cs" />
-    <Compile Include="JobApiTests.cs" />
-    <Compile Include="IoApiSetTests.cs" />
-    <Compile Include="Kernel32Tests.cs" />
-    <Compile Include="ConsoleTests.cs" />
-    <Compile Include="DebugApiTests.cs" />
-    <Compile Include="TLHelp32Tests.cs" />
-    <Compile Include="SysInfoTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Core\Vanara.Core.csproj">
-      <Project>{241f73ee-9298-45c9-b869-a045dff94c03}</Project>
-      <Name>Vanara.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\PInvoke\Kernel32\Vanara.PInvoke.Kernel32.csproj">
-      <Project>{842d436f-598c-47d7-b5aa-12399f8ccfe9}</Project>
-      <Name>Vanara.PInvoke.Kernel32</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\PInvoke\Security\Vanara.PInvoke.Security.csproj">
-      <Project>{392a14b0-1e10-4e88-9c13-0d965665ffb5}</Project>
-      <Name>Vanara.PInvoke.Security</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\PInvoke\Shared\Vanara.PInvoke.Shared.csproj">
-      <Project>{a5e519e9-feba-4fe3-93a5-b8269bef72f4}</Project>
-      <Name>Vanara.PInvoke.Shared</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\CSharpRunner\Shared.csproj">
-      <Project>{a96cff10-0967-429a-8700-4a86c97c5603}</Project>
-      <Name>Shared</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="NUnit">
-      <Version>3.12.0</Version>
-    </PackageReference>
-    <PackageReference Include="NUnit3TestAdapter">
-      <Version>3.16.1</Version>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
