--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -11,5 +11,6 @@
   </ItemGroup>
   <ItemGroup>
 	<Compile Remove="**\~*.cs" />
+    <SupportedPlatform Include="windows" />
   </ItemGroup>
 </Project>
