--- a/PInvoke/DbgHelp/Vanara.PInvoke.DbgHelp.csproj
+++ b/PInvoke/DbgHelp/Vanara.PInvoke.DbgHelp.csproj
@@ -6,7 +6,7 @@
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants) imported from Windows DbgHelp.dll.</Description>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <TargetFrameworks>net20;net35;net40;net45;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net20;net35;net40;net45;net5.0-windows;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.DbgHelp</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
