Fix multiple build warnings

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -11,6 +11,7 @@
   </ItemGroup>
   <ItemGroup>
 	<Compile Remove="**\~*.cs" />
-    <SupportedPlatform Include="windows" />
+	<None Include="**\~*.cs" />
+	<SupportedPlatform Include="windows" />
   </ItemGroup>
 </Project>
