--- a/UnitTests/Directory.Build.targets
+++ b/UnitTests/Directory.Build.targets
@@ -5,6 +5,11 @@
     <OutputPath>bin\$(Configuration)\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="**\~*.cs" />
+    <None Include="**\~*.cs" />
+    <SupportedPlatform Include="windows" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
   </ItemGroup>
