Updated Windows.Shell project to support forms

--- a/UnitTests/Windows.Shell/Windows.Shell.csproj
+++ b/UnitTests/Windows.Shell/Windows.Shell.csproj
@@ -1,6 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
     <AssemblyName>UnitTest.Windows.Shell</AssemblyName>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System.Design" />
